chore: 간단한 이름 변경, 줄바꿈 추가 등